--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@llamaindex/ollama": "^0.1.23",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "debug": "^4.4.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "llamaindex": "^0.12.0",
     "morgan": "^1.10.1",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "zod": "^4.1.11"
   },
